# ICCapiservices

./: .gitignore  Procfile  apitest.rest  db.sqlite3  manage.py  pyproject.toml  requirements.txt  utils.py
CBTpractice/: admin.py  apps.py  models.py  schemas.py  serializers.py  urls.py
CBTpractice/migrations/: 0001_initial.py  0002_initial.py  0003_remove_test_testmark.py  (+7 more)
ICCapiservices/: api.py  asgi.py  firebase.py  redis.py  settings.py  storages.py  urls.py  wsgi.py
ICCapp/: admin.py  apps.py  models.py  schemas.py  serializers.py  urls.py
authentication/: NINJA_MIGRATION_GUIDE.md  admin.py  jwt_utils.py  models.py  schemas.py  serializers.py  urls.py  views.py
blog/: NINJA_MIGRATION_GUIDE.md  admin.py  models.py  schemas.py  serializers.py  urls.py
chatroom/: admin.py  consumers.py  models.py  serializers.py  urls.py
customers/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
emails/: admin.py  consumers.py  models.py  routing.py  schemas.py  serializers.py  urls.py  views.py
notifications/: admin.py  consumers.py  models.py  schemas.py  serializers.py  urls.py  views.py
payments/: Paystack.py  admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
products/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
services/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
vidoes/: admin.py  apps.py  models.py  schemas.py  serializers.py  urls.py
whatsappAPI/: admin.py  apps.py  consumers.py  models.py  routing.py  schemas.py  serializers.py  urls.py  views.py
(+207 files in other folders)
