[project]
name = "iccapiservices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django==5.2.6",
    "djangorestframework==3.15.1",
    "django-ninja==1.4.3",
    "django-ninja-extra==0.30.1",
    "django-ninja-jwt==5.3.7",
    "django-cors-headers==4.3.1",
    "django-ckeditor==6.2.0",
    "django-jazzmin==2.6.0",
    "django-storages==1.12.3",
    "drf-yasg==1.21.10",
    "channels==3.0.5",
    "daphne==3.0.2",
    "channels-redis==3.4.1",
    "redis==6.2.0",
    "celery",  # optional, add if you need background tasks
    "psycopg2-binary==2.9.9", # PostgreSQL driver
    "gunicorn==20.1.0",
    "pydantic==2.11.7",
    "pillow==10.2.0",
    "shortuuid==1.0.13",
    "firebase-admin==7.1.0",
    "Authlib==1.6.1",
    "boto3==1.21.2",
    "google-cloud-storage==3.4.0",
    "google-cloud-firestore==2.21.0",
    "httpx==0.28.1",
]
